// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders 1`] = `
Object {
  "Component": Object {
    "BadgeText": Object {
      "active": false,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": 0,
      "isComponent": undefined,
      "mount": 0,
      "mountX": 0,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "BadgeText",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": undefined,
      "tag": [Function],
      "tags": Array [
        "BadgeText",
      ],
      "texture": Object {
        "fontFace": "XfinityBrownBold",
        "fontSize": 20,
        "lineHeight": 24,
        "textAlign": "center",
        "textColor": 4076863487,
        "type": "TextTexture",
        "verticalAlign": "middle",
      },
      "visible": true,
      "w": 0,
      "x": 8,
      "y": 1,
      "zIndex": 0,
    },
    "Icon": Object {
      "active": false,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": NaN,
      "hasFinalFocus": false,
      "hasFocus": false,
      "isComponent": true,
      "mount": 0,
      "mountX": 0,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "Icon",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": "",
      "tag": [Function],
      "tags": Array [
        "Icon",
      ],
      "type": "Icon",
      "visible": true,
      "w": NaN,
      "x": 0,
      "y": 0,
      "zIndex": 0,
    },
  },
}
`;

exports[`Badge renders icon and text side by side 1`] = `
Object {
  "Component": Object {
    "BadgeText": Object {
      "active": false,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": 0,
      "isComponent": undefined,
      "mount": 0,
      "mountX": 0,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "BadgeText",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": undefined,
      "tag": [Function],
      "tags": Array [
        "BadgeText",
      ],
      "texture": Object {
        "fontFace": "XfinityBrownBold",
        "fontSize": 20,
        "lineHeight": 24,
        "text": "HD",
        "textAlign": "center",
        "textColor": 4076863487,
        "type": "TextTexture",
        "verticalAlign": "middle",
      },
      "visible": true,
      "w": 0,
      "x": 8,
      "y": 1,
      "zIndex": 0,
    },
    "Icon": Object {
      "active": false,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": NaN,
      "hasFinalFocus": false,
      "hasFocus": false,
      "isComponent": true,
      "mount": 0,
      "mountX": 0,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "Icon",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": "",
      "tag": [Function],
      "tags": Array [
        "Icon",
      ],
      "texture": Object {
        "src": "assets/images/ic_lightning_white_32.png",
        "type": "ImageTexture",
      },
      "type": "Icon",
      "visible": true,
      "w": NaN,
      "x": 0,
      "y": 0,
      "zIndex": 0,
    },
  },
}
`;

exports[`Badge renders icon only 1`] = `
Object {
  "Component": Object {
    "BadgeText": Object {
      "active": false,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": 0,
      "isComponent": undefined,
      "mount": 0,
      "mountX": 0,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "BadgeText",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": undefined,
      "tag": [Function],
      "tags": Array [
        "BadgeText",
      ],
      "texture": Object {
        "fontFace": "XfinityBrownBold",
        "fontSize": 20,
        "lineHeight": 24,
        "textAlign": "center",
        "textColor": 4076863487,
        "type": "TextTexture",
        "verticalAlign": "middle",
      },
      "visible": true,
      "w": 0,
      "x": 8,
      "y": 1,
      "zIndex": 0,
    },
    "Icon": Object {
      "active": false,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": NaN,
      "hasFinalFocus": false,
      "hasFocus": false,
      "isComponent": true,
      "mount": 0,
      "mountX": 0,
      "mountY": 0,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "Icon",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": "",
      "tag": [Function],
      "tags": Array [
        "Icon",
      ],
      "texture": Object {
        "src": "assets/images/ic_lightning_white_32.png",
        "type": "ImageTexture",
      },
      "type": "Icon",
      "visible": true,
      "w": NaN,
      "x": 0,
      "y": 0,
      "zIndex": 0,
    },
  },
}
`;
